deploy: d6aebc035d391402eb97310e14d39d332fd181d4

--- a/search.html
+++ b/search.html
@@ -76,7 +76,14 @@
 
 <nav class="bd-links" id="bd-docs-nav" aria-label="Main navigation">
   
-  
+  <ul class="nav sidenav_l1">
+  <li class="">
+    <a href="welcome.html">Welcome</a>
+  </li>
+  <li class="">
+    <a href="notebooks/covid_transport_UK.html">Investigating available COVID-19 UK Data</a>
+  </li>
+</ul>
 </nav>
 
  <!-- To handle the deprecated key -->
