--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 
-<meta http-equiv="Refresh" content="0; url=notebooks/covid_transport_UK.html" />
+<meta http-equiv="Refresh" content="0; url=welcome.html" />
